# master_thesis_multiuav_gazebo

./: CMakeLists.txt  package.xml
include/: exp_formation_controller.h  exp_uav.h  formation_controller.h
launch/: exp_formation.launch  two_uav_and_one_insulator_formation.launch
parameters/: exp_formation.yaml
script/: command.txt  formation.py
src/: exp_formation_controller.cpp  exp_formation_controller_node.cpp  exp_uav.cpp  formation_controller.cpp  formation_controller_node.cpp
